reorganizing the backend and ending it
