# backend/src/controllers/pCourse.controller.js
@@ -14,7 +14,7 @@ export const coursePersonalizedAllGET = async (req, res) => {
         const data = await personalizedGET()
         res.status(200).json(data)
     } catch (error) {
-        console.error('Error obteniendo cursos personalizados', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'Error al obtener todos los cursos personalizados',
             error: error.message
@@ -28,7 +28,7 @@ export const coursePersonalizedByIdGET = async (req, res) => {
         const data = await personalizedByIdGET(coursep_id)
         res.status(200).json(data)
     } catch (error) {
-        console.error('Error obteniendo curso personalizado por ID', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'Error al obtener curso personalizado por Id',
             error: error.message
@@ -43,7 +43,7 @@ export const coursePersonalizedByTitleGET = async (req, res) => {
         const data = await personalizedBytitleGET(title)
         res.status(200).json(data)
     } catch (error) {
-        console.error('Error obteniendo curso personalizado por titulo', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'Error al obtener curso personalizado por titulo',
             error: error.message
@@ -55,6 +55,7 @@ export const coursePersonalizedByTitleGET = async (req, res) => {
 export const coursePersonalizedNew = async (req, res) => {
     try {
         const { 
+            coursep_id,
             title,
             description,
             duration,
@@ -62,10 +63,10 @@ export const coursePersonalizedNew = async (req, res) => {
             state_id,
             type_id
         } = req.body
-        const data = await personalizedNewCoursePOST(title, description, duration, company_id, state_id, type_id)
+        const data = await personalizedNewCoursePOST(coursep_id, title, description, duration, company_id, state_id, type_id)
         res.status(201).json(data);
     } catch (error) {
-        console.error('Error al crear un curso personalizado nuevo', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'Error al crear curso personalizado',
             error: error.message
@@ -88,7 +89,7 @@ export const coursePersonalizedUpdatePUT = async (req, res) => {
         const data = await personalizedUpdatePUT(title, description, duration, company_id, state_id, type_id, coursep_id)
         res.status(200).json(data)
     } catch (error) {
-        console.error('Error al actualizar curso personalizado', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'Error al actualizar curso personalizado',
             error: error.message
@@ -103,7 +104,7 @@ export const coursePersonalizedRemoveByIdDELETE = async (req, res) => {
         const data = await personalizedRemoveByIdDELETE(coursep_id)
         res.status(200).json(data)
     } catch (error) {
-        console.error('Error al eliminar curso personalizado por Id', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'UPS, no se pudo eliminar el curso personalizado, intentar nuevamente',
             error: error.message
@@ -118,7 +119,7 @@ export const coursePersonalizedRemoveByTitleDELETE = async (req, res) => {
         const data = await personalizedRemoveByTitleDELETE(title)
         res.status(200).json(data)
     } catch (error) {
-        console.error('Error a eliminar curso personalizado por titulo', error.message);
+        console.error(error.message);
         res.status(404).json({
             message: 'UPS, no se pudo eliminar el curso personalizado, intentar nuevamente',
             error: error.message
